fixed the text overflow issue on the right half when window gets smaller

--- a/style.css
+++ b/style.css
@@ -11,14 +11,14 @@ body {
 
 .left-half {
   background-color: hsl(252, 100%, 67%);
-  width: 25%;
-  /* height: 40%; */
-  /* border-radius: 20px; */
+  /* width: 25%; */
+  width: 500px;
   display: flex;
   flex-direction: column;
   align-items: center;
   border-bottom-left-radius: 20px;
   border-top-left-radius: 20px;
+  padding: 40px;
 }
 
 .your-result {
@@ -67,12 +67,12 @@ body {
 
 .right-half {
   background-color: hsl(0, 0%, 100%);
-  width: 25%;
-  /* height: 40%; */
+  /* width: 25%; */
+  width: 500px;
   box-shadow: 10px 10px 5px rgb(232, 231, 231);
   border-bottom-right-radius: 20px;
   border-top-right-radius: 20px;
-  padding-left: 30px;
+  padding: 40px;
 }
 
 .summary {
@@ -83,6 +83,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  width: 100%;
   margin: 5px 10px;
   border-radius: 5px;
   padding: 5px 7px;
@@ -98,7 +99,7 @@ body {
 }
 
 .category {
-  margin: 5px 50px 5px 5px;
+  margin: 5px;
 }
 
 .score {
@@ -129,7 +130,7 @@ body {
 .right-container {
   display: flex;
   flex-direction: column;
-  width: 80%;
+  width: 100%;
 }
 
 .continue {
